--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "learn-everyday-with-db",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=14.20.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
